--- a/cutomer/build.gradle
+++ b/cutomer/build.gradle
@@ -22,8 +22,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:3.1.4'
+	implementation 'org.springframework.cloud:spring-cloud-sleuth-zipkin:3.1.4'
 	//implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:3.0.0'
 	implementation 'org.postgresql:postgresql'
+	implementation 'org.springframework.cloud:spring-cloud-starter-sleuth:3.1.1'
 	//compile 'com.amigoscode:feignclient:0.0.1'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
