--- a/eureka-server/build.gradle
+++ b/eureka-server/build.gradle
@@ -25,7 +25,9 @@ ext {
 dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server'
 	compileOnly 'org.projectlombok:lombok'
+	implementation 'org.springframework.cloud:spring-cloud-sleuth-zipkin:3.1.4'
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:3.0.0'
+	implementation 'org.springframework.cloud:spring-cloud-starter-sleuth:3.1.1'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
