--- a/fraud/build.gradle
+++ b/fraud/build.gradle
@@ -22,6 +22,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.cloud:spring-cloud-starter-sleuth:3.1.1'
+	implementation 'org.springframework.cloud:spring-cloud-sleuth-zipkin:3.1.4'
 	// https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-netflix-eureka-client
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:3.1.4'
     //implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:3.0.0'
