--- a/notification/build.gradle
+++ b/notification/build.gradle
@@ -26,6 +26,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.cloud:spring-cloud-starter-sleuth:3.1.1'
+	implementation 'org.springframework.cloud:spring-cloud-sleuth-zipkin:3.1.4'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:3.1.4'
 	implementation 'org.postgresql:postgresql'
 	compileOnly 'org.projectlombok:lombok'
