--- a/notification/src/main/resources/application.yml
+++ b/notification/src/main/resources/application.yml
@@ -16,5 +16,13 @@ spring:
                 dialect: org.hibernate.dialect.PostgreSQLDialect
                 format_sql: true
         show-sql: true
-
+    rabbitmq:
+        addresses: localhost:5672    
+rabbitmq:
+    exchanges:
+       internal: internal.exchange        
+    queues:
+       notification: notification.queue
+    routing-keys:
+       internal-notification: internal.notification.routing-key   
        
