--- a/cutomer/build.gradle
+++ b/cutomer/build.gradle
@@ -23,6 +23,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:3.1.4'
 	implementation 'org.springframework.cloud:spring-cloud-sleuth-zipkin:3.1.4'
+	implementation 'org.springframework.boot:spring-boot-starter-amqp'
 	//implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:3.0.0'
 	implementation 'org.postgresql:postgresql'
 	implementation 'org.springframework.cloud:spring-cloud-starter-sleuth:3.1.1'
