--- a/cutomer/src/main/resources/application.yml
+++ b/cutomer/src/main/resources/application.yml
@@ -16,3 +16,12 @@ spring:
                 dialect: org.hibernate.dialect.PostgreSQLDialect
                 format_sql: true
         show-sql: true
+    rabbitmq:
+        addresses: localhost:5672     
+rabbitmq:
+    exchanges:
+       internal: internal.exchange        
+    queues:
+       notification: notification.queue
+    routing-keys:
+       internal-notification: internal.notification.routing-key          
