--- a/notification/build.gradle
+++ b/notification/build.gradle
@@ -29,6 +29,7 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-sleuth:3.1.1'
 	implementation 'org.springframework.cloud:spring-cloud-sleuth-zipkin:3.1.4'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:3.1.4'
+	implementation 'org.springframework.boot:spring-boot-starter-amqp'
 	implementation 'org.postgresql:postgresql'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
