--- a/apigw/build.gradle
+++ b/apigw/build.gradle
@@ -3,6 +3,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.14.RELEASE'
 	id 'java'
 }
+apply plugin: 'java'
 
 group = 'com.microservices'
 version = '0.0.1-SNAPSHOT'
