--- a/eureka-server/build.gradle
+++ b/eureka-server/build.gradle
@@ -2,7 +2,10 @@ plugins {
 	id 'org.springframework.boot' version '2.6.12'
 	id 'io.spring.dependency-management' version '1.0.14.RELEASE'
 	id 'java'
+	id 'com.google.cloud.tools.jib' version '3.3.0'
 }
+
+apply plugin: 'java'
 
 group = 'com.amigoscode'
 version = '0.0.1-SNAPSHOT'
